[gd_scene load_steps=4 format=3 uid="uid://dl0hs7ygbegqh"]

[ext_resource type="Script" path="res://scenes/UI/pause_menu.gd" id="1_doh2a"]
[ext_resource type="Theme" uid="uid://do6m4y5l1ruhd" path="res://ui_theme.tres" id="1_iflcs"]
[ext_resource type="PackedScene" uid="uid://74dwo7ty5qh0" path="res://scenes/UI/controls_ui.tscn" id="3_g5fbm"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iflcs")
script = ExtResource("1_doh2a")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_type_variation = &"PanelContainerInGame"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../HBoxContainer3/ResetButton")
focus_next = NodePath("../../HBoxContainer3/ResetButton")
text = "Resume"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/ResumeButton")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/QuitToMenuButton")
focus_next = NodePath("../../HBoxContainer2/QuitToMenuButton")
focus_previous = NodePath("../../HBoxContainer/ResumeButton")
text = "Reset Level"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuitToMenuButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer3/ResetButton")
focus_previous = NodePath("../../HBoxContainer3/ResetButton")
text = "Quit to Menu"

[node name="ControlMargin" parent="PanelContainer/HBoxContainer" instance=ExtResource("3_g5fbm")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer3/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
